--- a/CoreRecap/CoreRecap.csproj
+++ b/CoreRecap/CoreRecap.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstract\" />
+    <Folder Include="UtilitiesRecap\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreRecap\CoreRecap.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.11" />
   </ItemGroup>
 
 </Project>
