--- a/BusinessReCap/BusinessReCap.csproj
+++ b/BusinessReCap/BusinessReCap.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoreRecap\CoreRecap.csproj" />
     <ProjectReference Include="..\DataAccessReCap\DataAccessReCap.csproj" />
     <ProjectReference Include="..\EntitiesReCap\EntitiesReCap.csproj" />
   </ItemGroup>
