--- a/WebAPIrecap/WebAPIrecap.csproj
+++ b/WebAPIrecap/WebAPIrecap.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BusinessReCap\BusinessReCap.csproj" />
     <ProjectReference Include="..\DataAccessReCap\DataAccessReCap.csproj" />
     <ProjectReference Include="..\EntitiesReCap\EntitiesReCap.csproj" />
